--- a/misc/impossible/Dockerfile
+++ b/misc/impossible/Dockerfile
@@ -2,18 +2,18 @@ FROM ubuntu:22.04
 
 RUN apt-get update && apt-get install -y socat
 
-RUN useradd -ms /bin/sh bank_2
-WORKDIR /home/bank_2
+RUN useradd -ms /bin/sh impossible
+WORKDIR /home/impossible
 
-COPY ./bank_2 ./
+COPY ./chall.py ./
 COPY ./flag.txt /
 
-RUN chown -R root:bank_2 /home/bank_2 && \
-     chmod 750 /home/bank_2 && \
-     chmod 550 /home/bank_2/bank_2 && \
-     chown root:bank_2 /flag.txt && \
+RUN chown -R root:impossible /home/impossible && \
+     chmod 750 /home/impossible && \
+     chmod 550 /home/impossible/chall.py && \
+     chown root:impossible /flag.txt && \
      chmod 440 /flag.txt
 
-EXPOSE 31138
+EXPOSE 31337
 
-CMD ["socat", "-T60", "TCP-LISTEN:31138,reuseaddr,fork,su=bank_2","EXEC:/home/bank_2/bank_2"]
+CMD ["socat", "-T60", "TCP-LISTEN:31338,reuseaddr,fork,su=impossible","EXEC:/home/impossible/chall.py"]
